Examples/fail/not-a-tuple-02.stella
language core;

fn main(n : Nat) -> Nat {
    return { current = n, next = succ(n) }.1;
}
